# SZE-MOSZE-2020-Pottyok

./: .gitignore  Blood_Raven.json  CharacterSVGRenderer.cpp  CharacterSVGRenderer.h  CharacterSVGRenderer_8h_source.html  Damage.h  Damage_8h_source.html  Dark_Wanderer.json  Dockerfile  Entity.cpp  Entity.h  Entity_8h_source.html  Fallen.json  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  HeroTextRenderer.cpp  HeroTextRenderer.h  HeroTextRenderer_8h_source.html  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  JsonParser.cpp  JsonParser.h  JsonParser_8h_source.html  Makefile  Map.cpp  Map.h  Map_8h_source.html  MarkedMap.cpp  MarkedMap.h  MarkedMap_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  ObserverSVGRenderer.cpp  ObserverSVGRenderer.h  (+166 more)
.VSCodeCounter/2020-12-08_00-59-16/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-12-08_00-59-57/: details.md  results.csv  results.md  results.txt
.github/workflows/: JsonTests.yml  UnitTests.yml  pushdocs.yml  test.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+17 more)
test-cppcheck-build-dir/: Entity.a1  Game.a1  Player.a1  files.txt  lastResults.xml  main.a1  statistics.txt
tests/: CMakeLists.txt  DamageTests.cpp  EntityTests.cpp  GameTests.cpp  JsonTests.cpp  MapEntityTests.cpp  MapTests.cpp  MarkedMapTests.cpp  RendererTests.cpp  expected.txt  inout.py  map_test.txt  markedmap_test.txt  outputtest.sh  preparedgame_test.json  results.txt
units/: Dark_Wanderer.json  TestHero.json  TestMonster.json  TestUnit.json  bela.json  expected.txt  kakarott.json  maple.json  sally.json
